# wxWebMap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  install-dependencies.bat
build_example/: README.md  makefile.unx
cmake/: IconicWebMapConfig.cmake.in  README.txt  portfile.cmake  portfile_for_IE_EDGE.cmake  portfile_vcpkg_20220419.cmake
data/: Footprints_LongLat.ifp  map.html
data/html/: map.html
data/images/: Footprints_LongLat.ifp
data/js/: wxMapMarker.js  wxMapPolygon.js
doc/: iconic-AStyleExtension.cfg  wxWebMap.doxygen
examples/: CMakeLists.txt  webview.cpp
examples/wxWebMapApp/: CMakeLists.txt  Defines.h  ImageReader.cpp  ImageReader.h  PolygonReader.cpp  PolygonReader.h  SourceViewDialog.cpp  SourceViewDialog.h  wxWebMapApp.cpp  wxWebMapApp.h  wxWebMapFrame.cpp  wxWebMapFrame.h
examples/wxWebMapApp2/: CMakeLists.txt  SourceViewDialog.cpp  SourceViewDialog.h  wxWebMapApp.cpp  wxWebMapApp.h  wxWebMapFrame.cpp  wxWebMapFrame.h
include/: MapHtml.h  wxMapHtml.h  wxMapImage.h  wxMapImageS.h  wxMapMarker.h  wxMapObject.h  wxMapPolygon.h  wxMapUtil.h  wxWebMap.h
include/detail/: MapHtmlImpl.h  wxWebMapImpl.h
src/: CMakeLists.txt  MapHtml.cpp  RCa11340  wxMapHtml.cpp  wxMapImage.cpp  wxMapImageS.cpp  wxMapMarker.cpp  wxMapObject.cpp  wxMapPolygon.cpp  wxWebMap.cpp
test/: CMakeLists.txt  IconicWebMapTest.cpp  MapHtmlTest.hpp
